added jquery stuffgit add .

--- a/views/home.html
+++ b/views/home.html
@@ -1,1 +1,14 @@
-<h1>Hello Nick</h2>
+<div role="main" id="map-canvas"></div>
+
+			<div data-role="page" id="sidebar" class="home span4">
+				<ul id="today-events" now="<%= now %>">
+
+					<li class="loading">Events are loading...</li>
+					<li class="loading">Events are loading...</li>
+					<li class="loading">Events are loading...</li>
+					<li class="loading">Events are loading...</li>												
+
+				</ul>
+
+			</div><!-- end sidemenu -->
+</div>	
