--- a/views/layout.html
+++ b/views/layout.html
@@ -1,139 +1,35 @@
-<!--
-<!DOCTYPE html>
-<html class="no-js">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>{{pageTitle}}</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width">
-<!--
-
-        <link rel="stylesheet" href="/css/bootstrap.min.css">
-        <style>
-            body {
-                padding-top: 60px;
-                padding-bottom: 40px;
-            }
-        </style>
-        <link rel="stylesheet" href="/css/bootstrap-responsive.min.css">
-        <link rel="stylesheet" href="/css/main.css">
-
-        <script src="/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
-
-    </head>
-    <body>
-	    <h1>Layout Page</h1>
-
-
-        <div class="container">
-        
-            {{{yield}}}
-                      
-        </div> 
-
-    </body>
-</html>
--->
-
-
 <!DOCTYPE html>
 <html>
   <head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
-    <style type="text/css">
-      html { height: 100% }
-      body { height: 100%; margin: 0; padding: 0 }
-      #map-canvas { height: 100% }
-    </style>
-    <script type="text/javascript" href="/static/js/scripts.js"
+    
+    <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="/css/style.css" rel="stylesheet">
+    
     <script type="text/javascript"
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDFC76iY5Mh9pupgETrXcF-DP3y57bmKME&sensor=false">
     </script>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script type="text/javascript" src="http://www.google.com/jsapi"></script>
-    <script type="text/javascript">
 
-      function initialize() {
-	    var myLatlng = new google.maps.LatLng(-25.363882,131.044922);
-	    
-	    $.getJSON('epa_echo_full_final.json', function(data) {
-		    
-		    $.each(data, function(key, value){
-			    if(value.LRTLat != ""){
-				 /*    console.log(key + ": " + value.LRTLat + ":"+ value.LRTLon);	 */
-				    var tmpLatLng = new google.maps.LatLng(value.LRTLat,value.LRTLon);
-				    var markerIconFive = "img/markerIconFive.png";
-				    var markerIconZero = "img/markerIconZero.png";
-				    var markerIconThree = "img/markerIconThree.png";				    
-				    			    						
-					var marker = new google.maps.Marker({
-					    map: map,
-					    position: tmpLatLng,
-					    icon: markerIconZero
-					});				    
-									
-					var infowindow =  new google.maps.InfoWindow({
-					    content: ''
-					});
-					
-					var contentInfo = '<div id="content">'+
-						'<h3>' + value.Facility_Name + '</h3>' + 
-						'<div>' + value.Facility_Street + " " + value.Facility_City + ", " + value.Facility_State + ", " + value.Facility_ZIP_Code + '</div>' +
-						'<ul><li>Days since last inspection : ' + value.DaysSinceLastInspection + '</li>' +
-						/*'<li> Inspections (5yrs) : ' + value.Inspections(5yrs) + '</li>' + */
-						'<li> Alleged significat violations : ' + value.AllegedCurrentSignificantViolations + '</li>' +
-						/*'<li> Date of last formal aciont : ' + value.DateofLastFormalAction/NOVs(5yrs) + '</li>' + */
-						'<a href="/home">View Site</a>' + 
-						'</ul>'						
-					bindInfoWindow(marker, map, infowindow, contentInfo);
-/*						'<b>'+value.Facility_Name + "</b><br>" + value.Facility_Street + " " + value.Facility_City + ", " + value.Facility_State +
-						'<ul><li>Days since last inspection : '+ value.DaysSinceLastInspection + '</li><li> Alleged significat violations : ' + value.AllegedCurrentSignificantViolations + '</li></ul>'
-						);*/
+    <script src="/js/scripts.js" type="text/javascript"></script>
 
-			    } else {
-			    
-			    }
-		    });		    		    
-	    });
-    
-      	if (google.loader.ClientLocation){
-      		var latlng = new google.maps.LatLng(google.loader.ClientLocation.latitude, google.loader.ClientLocation.longitude);
-      	}
-      	
-        var mapOptions = {
-          center: latlng,
-          zoom: 12,
-          mapTypeId: google.maps.MapTypeId.SATELLITE
-        };
-        var map = new google.maps.Map(document.getElementById("map-canvas"), mapOptions);
-
-		document.getElementById("location").innerHTML = location; 
-		
-		var marker = new google.maps.Marker({
-		  position: myLatlng,
-		  map: map,
-		  title: 'Hello World!'
-		});           
-      }
-
-		// binds a map marker and infoWindow together on click
-		var bindInfoWindow = function(marker, map, infowindow, html) {
-		    google.maps.event.addListener(marker, 'click', function() {
-		        infowindow.setContent(html);
-		        infowindow.open(map, marker);	    
-		    });
-		}
-	
-		google.maps.event.addDomListener(window, 'load', initialize);
-
-
-
-    </script>
   </head>
   <body>
-  	<div id="location"></div>
-    <div id="map-canvas"/>
+
+
+<!--   	<div id="location"></div> -->
+
+<!-- 	    <div id="map-canvas"/> -->
+    
+	  	{{{ yield }}}
+
+
+
+
+
+	 <script src="http://code.jquery.com/jquery.js"></script>
+	 <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
