added more jquery to find the top ten closest landfills

--- a/views/home.html
+++ b/views/home.html
@@ -3,12 +3,8 @@
 			<div data-role="page" id="sidebar" class="home span4">
 				<ul id="today-events" now="<%= now %>">
 
-					<li class="loading">Events are loading...</li>
-					<li class="loading">Events are loading...</li>
-					<li class="loading">Events are loading...</li>
-					<li class="loading">Events are loading...</li>												
-
+					<li class="loading">Loading landfills...</li>
+									
 				</ul>
-
 			</div><!-- end sidemenu -->
 </div>	
