adding functionality and making it look sexy

--- a/views/home.html
+++ b/views/home.html
@@ -1,7 +1,7 @@
 <div role="main" id="map-canvas"></div>
 
 			<div data-role="page" id="sidebar" class="home span4">
-				<ul id="today-events" now="<%= now %>">
+				<ul id="landfill-locations" >
 
 					<li class="loading">Loading landfills...</li>
 									
