--- a/views/layout.html
+++ b/views/layout.html
@@ -17,6 +17,35 @@
 
   </head>
   <body>
+	<div class="navbar navbar-inverse navbar-fixed-top">
+	      <div class="navbar-inner">
+	        <div class="container-fluid">
+<!--
+	          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+	            <span class="icon-bar"></span>
+	            <span class="icon-bar"></span>
+	            <span class="icon-bar"></span>
+	          </button>
+-->
+	          <a class="brand" >Landfill Mapper</a>
+	          <div class="nav-collapse collapse">
+
+				<div class="navbar-form pull-right">
+<!-- 	            <form class="navbar-form pull-right"> -->
+	              <input id="formSearch" class="span2" type="text" placeholder="Landfills...">
+	              <button type="submit" class="btn" onclick="searchLandfills()">Search</button>
+<!-- 	            </form> -->
+				</div>
+	          </div><!--/.nav-collapse -->
+	        </div>
+	      </div>
+	</div>  
+  
+
+
+<!-- 		  <input id="formSearch" type="text" class="input-medium search-query"> -->
+<!-- 		  <button class="btn" onclick="searchLandfills()">Search Landfills</button> -->
+<!-- 		  <div id="landfill_length"></div> -->
 
 
 <!--   	<div id="location"></div> -->
