adding more jquery

--- a/views/layout.html
+++ b/views/layout.html
@@ -27,7 +27,9 @@
 	            <span class="icon-bar"></span>
 	          </button>
 -->
-	          <a class="brand" >Landfill Mapper</a>
+
+	          <a class="brand" onclick="showSidebar()">  Show List  </a>
+	          <a class="brand" onclick="hideSidebar()">  Hide List  </a>
 	          <div class="nav-collapse collapse">
 
 				<div class="navbar-form pull-right">
