more functionality; ready for presentation on april 22nd

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -66,3 +66,8 @@ html, body {
     cursor: pointer;
     cursor: hand;
 }
+#sidebar ul li:active {
+    background-color: #f0f0f0;
+    cursor: pointer;
+    cursor: hand;
+}
