--- a/views/home.html
+++ b/views/home.html
@@ -1,10 +1,14 @@
 <div role="main" id="map-canvas"></div>
 
-			<div data-role="page" id="sidebar" class="home span4">
+			<div id="sidebar" class="home span4">
 				<ul id="landfill-locations" >
 
 					<li class="loading">Loading landfills...</li>
 									
 				</ul>
 			</div><!-- end sidemenu -->
+
 </div>	
+
+<!-- class="home span4" -->
+<!-- data-role="page" -->
