added a link back to life of trash main page

--- a/views/layout.html
+++ b/views/layout.html
@@ -14,7 +14,8 @@
     <script type="text/javascript" src="http://www.google.com/jsapi"></script>
 
     <script src="/js/scripts.js" type="text/javascript"></script>
-
+    <script src="/js/modal.js" type="text/javascript"></script>
+    
   </head>
   <body>
 	<div class="navbar navbar-inverse navbar-fixed-top">
@@ -25,8 +26,11 @@
 
 		      <div class="nav-collapse collapse">
 				<ul class="nav">
+<!--
 				  <li class="active"><a>Landfills found:</a></li>
   				  <li class="active"><a href="#" id="landfill_length"></a></li>
+-->
+   				  <li class="active"><a href="http://www.lifeoftrash.com">Life of Trash Website</a></li>
 				</ul>
 <!--
 		          <button type="button" class="btn" data-toggle="collapse" data-target="#sidebar">
