--- a/views/home.html
+++ b/views/home.html
@@ -8,7 +8,30 @@
 				</ul>
 			</div><!-- end sidemenu -->
 
-</div>	
 
 <!-- class="home span4" -->
 <!-- data-role="page" -->
+
+
+
+ 
+<!-- Modal -->
+	<div id="master">
+	</div>
+	<!--
+		<div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+		  <div class="modal-header">
+		    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+		    <h3 id="myModalLabel">Modal header</h3>
+		  </div>
+		  <div class="modal-body">
+		    <p>One fine body…</p>
+		  </div>
+		  <div class="modal-footer">
+		    <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+		    <button class="btn btn-primary">Save changes</button>
+		  </div>
+		</div>
+	-->
+
+</div>	
